--- a/to-do-list/src/styles.scss
+++ b/to-do-list/src/styles.scss
@@ -4,7 +4,7 @@
 *{
   margin: 0;
   padding: 0;
-  font-family: roboto;
+  font-family: roboto, serif;
   font-weight: 400;
 }
 
@@ -24,7 +24,7 @@ button{
   cursor: pointer;
 }
 
-//Classes
+
 .container{
   width: 350px;
   margin: 50px auto;
