--- a/to-do-list/src/styles.scss
+++ b/to-do-list/src/styles.scss
@@ -1,10 +1,9 @@
 @import "dist/scss/variable.scss";
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
 *{
   margin: 0;
   padding: 0;
-  font-family: roboto, serif;
+  font-family: "Segoe Print", serif;
   font-weight: 400;
 }
 
