--- a/to-do-list/src/styles.scss
+++ b/to-do-list/src/styles.scss
@@ -1,11 +1,17 @@
 @import "dist/scss/variable.scss";
 
+@font-face {
+  font-family: "Roboto";
+  src: local("Roboto"), url("./assets/fonts/Roboto-Regular.ttf") format("truetype");
+}
+
 *{
   margin: 0;
   padding: 0;
-  font-family: "Segoe Print", serif;
+  font-family: "Roboto", serif;
   font-weight: 400;
 }
+
 
 body{
   background: $primary-background-color;
