--- a/to-do-list/src/styles.scss
+++ b/to-do-list/src/styles.scss
@@ -1,8 +1,8 @@
-@import "../../dist/scss/variable";
+@import "dist/scss/variable";
 
 @font-face {
   font-family: "Roboto";
-  src: local("Roboto"), url("../fonts/Roboto-Regular.ttf") format("truetype");
+  src: local("Roboto"), url("assets/fonts/Roboto-Regular.ttf") format("truetype");
 }
 
 *{
